@startuml
abstract class Vehicle {
    +string VehicleType
    +void Drive()
    +double CalculateConsumption()
    +double CalculateTime()
}

interface IElectricVehicle {
    +void Recharge()
}

interface IFuelVehicle {
    +void Refuel()
}

abstract class PassengerTransport extends Vehicle
abstract class MaterialTransport extends Vehicle

class Car extends PassengerTransport
class Bicycle extends PassengerTransport

class ElectricCar extends Car implements IElectricVehicle
class FuelCar extends Car implements IFuelVehicle

class Truck extends MaterialTransport
class ElectricTruck extends Truck implements IElectricVehicle
class FuelTruck extends Truck implements IFuelVehicle

abstract class FuelingStation {
    +void ProvideEnergy()
}

class FuelStation extends FuelingStation {
    +void ProvideFuel()
}

class ChargingStation extends FuelingStation {
    +void ProvideCharge()
}

enum RoadType {
    CITY
    HIGHWAY
    BACKROAD
    OFFROAD
}

Vehicle --o RoadType : drives on
IElectricVehicle --o ChargingStation : recharges at
IFuelVehicle --o FuelStation : refuels at

@enduml